--- a/_posts/2016-01-22-welcome.markdown
+++ b/_posts/2016-01-22-welcome.markdown
@@ -19,15 +19,15 @@ In [2]: "what's your main respository?"
 "http://github.com/smileboywtu"
 
 In [3]: "what's your favorite program language?"
-python
+"python"
 
 In [4]: "how can I contact you?"
-smileboywtu@gmail.com
+"smileboywtu@gmail.com"
 
 In [5]: "what's more about you?"
-just check about and project page.
+"just check about and project page."
 
 In [6]: "oh, do you need a job?"
-yeah, I'd like a good job.
+"yeah, I'd like a good job."
 
 {% endhighlight %}
